--- a/src/components/table/style/index.less
+++ b/src/components/table/style/index.less
@@ -28,13 +28,19 @@
   }
 
   .t-pro-table-content {
+    & > .t-card__body {
+      display: flex;
+      flex-direction: column;
+      gap: var(--td-comp-paddingTB-l);
+    }
+
     .t-pro-table-toolbar {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 16px 0;
-      border-bottom: 1px solid var(--td-border-level-1-color);
-      margin-bottom: 16px;
+      // padding: 16px 0;
+      // border-bottom: 1px solid var(--td-border-level-1-color);
+      // margin-bottom: 16px;
 
       .t-pro-table-toolbar-left {
         display: flex;
