--- a/src/components/table/components/toolbar/style.less
+++ b/src/components/table/components/toolbar/style.less
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 16px 0;
+  // padding: 16px 0;
   overflow-x: auto;
   overflow-y: hidden;
 
@@ -92,7 +92,7 @@
         margin-left: 0;
       }
 
-      > span {
+      >span {
         display: block;
         width: 100%;
         height: 100%;
