--- a/src/components/table/style/index.less
+++ b/src/components/table/style/index.less
@@ -28,7 +28,7 @@
   }
 
   .t-pro-table-content {
-    & > .t-card__body {
+    &>.t-card__body {
       display: flex;
       flex-direction: column;
       gap: var(--td-comp-paddingTB-l);
@@ -98,8 +98,39 @@
   }
 }
 
+// AutoFill 模式样式
+.t-pro-table.t-pro-table-autofill {
+  height: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+
+  .t-pro-table-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+
+    >.t-card__body {
+      height: 100%;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      min-height: 0;
+
+      >.t-table {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+      }
+    }
+  }
+}
+
 // Ghost 模式样式
 .t-pro-table-ghost {
+
   .t-pro-table-search,
   .t-pro-table-content {
     background: transparent;
